api/krakend/k8s/base/namespace.yaml
# krakend/k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fw-api
  labels:
    istio-injection: disabled
